# bqnt_examples

./: .gitignore  .pre-commit-config.yaml  README.md  basics_p1.ipynb  bqnt_corr.ipynb  bqnt_first_app.ipynb  bqnt_fund_app.ipynb  bqnt_futures.ipynb  bqnt_iql_magics.ipynb  bqnt_omon_app.ipynb  bqnt_oneshot_curve.ipynb  bqnt_plotly_app.ipynb  bqnt_profiling.ipynb  misc_devtools_icecream.ipynb  plotly_combining.ipynb  pyproject.toml  requirements.txt
bql_stub/: README.md  bql.py  bql_faker.py  builder.ipynb  pyproject.toml  queries.json
bql_stub/bql/: __init__.py  bql.py  bql_faker.py
test/: .default_env  test_nb.py
